corrected swagger,docker conf, small corrects
